Uploading the complete code. I found several issues although it was supposed to be a tutorial to learn about these stuff. Do people test their code or something? gosh... anyway, I solved some of them. But I keep working on it.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% include partials/header.ejs %>
     <div class="table-wrapper">
-        <% if (players.length > 0) {%>
+        <% if (typeof players !== 'undefined' && players.length > 0) {%>
             <table class="table table-hovered">
                 <thead class="thead-dark">
                     <tr>
